AC_INIT(http_server, 0.1, jbussdieker@gmail.com, http_server, http://github.com/jbussdieker/c-http_server)


AC_COPYRIGHT(Copyright (C) 2013 Jaja)
AC_REVISION([$Revision: 0.01 $])

AC_CONFIG_SRCDIR(bin/hello.c)
AC_CONFIG_AUX_DIR(build-aux)
AC_CONFIG_MACRO_DIR(m4)

LT_INIT

AM_INIT_AUTOMAKE

AC_PROG_CC_STDC
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile bin/Makefile])

AC_OUTPUT
