AC_PREREQ(2.59)
AC_COPYRIGHT(Copyright (C) 2013 Jaja)
AC_REVISION([$Revision: 0.01 $])
AC_INIT(http_server, 0.1, jbussdieker@gmail.com, http_server, http://github.com/jbussdieker/c-http_server)
AC_CONFIG_SRCDIR(bin/server.c)
AC_CONFIG_MACRO_DIR(m4)
AC_CONFIG_AUX_DIR(build-aux)
AC_LANG(C)
AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CC_STDC
AC_CHECK_HEADERS([sys/socket.h])
AC_CHECK_HEADERS([netinet/in.h])
AC_CONFIG_FILES([Makefile bin/Makefile])
AC_OUTPUT
